--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSolve - Your Ultimate Academic Helper</title>
-    <link rel="icon" href="/static/image-7.jpg" type="image/jpeg" sizes="32x32" />
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.png" type="image/png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
