--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,7 @@
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Mathematics</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Social Studies</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Computer Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Languages</a></li>
                     </ul>
                 </div>
@@ -221,11 +222,11 @@
                     <ul class="space-y-2">
                         <li class="flex items-start">
                             <i data-feather="mail" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">help@edusolve.com</span>
+                            <span class="text-gray-300">suraj.k.gupta.dev@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="phone" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">+1 (555) 123-4567</span>
+                            <span class="text-gray-300">+91 7644881267</span>
                         </li>
                     </ul>
                 </div>
