--- a/public/ask.html
+++ b/public/ask.html
@@ -305,6 +305,7 @@
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Mathematics</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Social Studies</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Computer Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Languages</a></li>
                     </ul>
                 </div>
@@ -314,15 +315,16 @@
                     <ul class="space-y-2">
                         <li class="flex items-start">
                             <i data-feather="mail" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">help@edusolve.com</span>
+                            <span class="text-gray-300">suraj.k.gupta.dev@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="phone" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">+1 (555) 123-4567</span>
+                            <span class="text-gray-300">+91 7644881267</span>
                         </li>
                     </ul>
                 </div>
             </div>
+            
             
             <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
                 <p class="hover:text-gray-300 transition-colors cursor-pointer">© 2025 EduSolve. All rights reserved. Created by Suraj Kumar Gupta</p>
