--- a/public/pricing.html
+++ b/public/pricing.html
@@ -179,7 +179,7 @@
                 <div class="pricing-card bg-white rounded-2xl shadow-lg p-8 border border-gray-200 transition-all duration-300">
                     <div class="text-center">
                         <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-6">
-                            <i data-feather="crown" class="w-8 h-8 text-purple-600"></i>
+                            <i data-feather="star" class="w-8 h-8 text-purple-600"></i>
                         </div>
                         <h3 class="text-2xl font-bold text-indigo-900 mb-2">Elite</h3>
                         <p class="text-gray-600 mb-6">Ultimate learning experience</p>
@@ -294,6 +294,7 @@
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Mathematics</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Social Studies</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Computer Science</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-teal-300 transition-colors">Languages</a></li>
                     </ul>
                 </div>
@@ -303,15 +304,16 @@
                     <ul class="space-y-2">
                         <li class="flex items-start">
                             <i data-feather="mail" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">help@edusolve.com</span>
+                            <span class="text-gray-300">suraj.k.gupta.dev@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="phone" class="w-4 h-4 mt-1 mr-2"></i>
-                            <span class="text-gray-300">+1 (555) 123-4567</span>
+                            <span class="text-gray-300">+91 7644881267</span>
                         </li>
                     </ul>
                 </div>
             </div>
+            
             
             <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
                 <p class="hover:text-gray-300 transition-colors cursor-pointer">© 2025 EduSolve. All rights reserved. Created by Suraj Kumar Gupta</p>
