--- a/public/privacy.html
+++ b/public/privacy.html
@@ -96,7 +96,7 @@
       Country : India
     </p>
     <footer>
-      &copy; © 2025 EduSolve. All rights reserved.
+      &copy; 2025 EduSolve. All rights reserved.
     </footer>
   </div>
 </body>
