--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
                     <div class="flex items-center mb-6">
                         <div class="w-16 h-16 rounded-full bg-gradient-to-r from-teal-400 to-blue-500 flex items-center justify-center text-white font-bold text-xl mr-4">S</div>
                         <div>
-                            <h4 class="font-bold text-indigo-900">Sarah J.</h4>
+                            <h4 class="font-bold text-indigo-900">Sarah Jr.</h4>
                             <p class="text-gray-500">Grade 11 Student</p>
                         </div>
                     </div>
